task-8/flask-ingress.yaml
# prettier-ignore
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: flask-ingress
  namespace: abdulaziz
spec:
  ingressClassName: nginx
  rules:
  - host: abdulaziz.nvrbckdown.uz
    http:
      paths:
      - backend:
          service:
            name: final-exam
            port:
              number: 5000
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
